--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Project</title>
+    <title>{{projectName}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
 	<!-- this is a comment in HTML -->
 	<div class="container">
 		<div class="jumbotron">
-  			<h1>Project Title</h1>
+  			<h1>{{projectName}}</h1>
   			<p>one-sentence description of project</p>
 		</div>
 
@@ -44,8 +44,8 @@
             <tr>
               <td>Student 5th grade</td>
               <td>Desire to be seen as a tastemaker for her friends. Hears about new music from older sister in middle school.</td>
-            </tr>  
-          </tbody>          
+            </tr>
+          </tbody>
         </table>
       </div>
       <div class="col-md-6">
